# ncaa_baseball_processor

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  bref_roster_scraper.py  generate_viewer.py  historical_teams.txt  mlb_reader.py  name_matcher.py  ncaab_html_generator.py  ncaab_parser.py  partner_roster_integration.py  pdf_to_html.py  player_crossover.py  pyproject.toml  teams_to_scrape.txt  verify_refactor.py
baseball_processor/: __init__.py  __main__.py  main.py
cache/: 20170224_Rutgers_vs_Virginia_Charlottesville.json  20180220_VMI_vs_Virginia_Charlottesville.json  20190219_VMI_vs_Virginia_Charlottesville.json  20230220_Utah_vs_SanFrancisco_SanFrancisco.json  20230616_Florida_vs_Virginia_Omaha.json  20230617_WakeForest_vs_Stanford_Omaha.json  20230618_Florida_vs_OralRoberts_Omaha.json  20230618_TCU_vs_Virginia_Omaha.json  20230619_Tennessee_vs_Stanford_Omaha.json  20230619_WakeForest_vs_LSU_Omaha.json  20240216_SanFrancisco_vs_FairleighDickinson_SanFrancisco.json  20240330_SanFrancisco_vs_SantaClara_SanFrancisco.json  20240406_California_vs_Arizona_Berkeley.json  20250214_California_vs_Nevada_Berkeley.json  20250217_SanFrancisco_vs_SacramentoState_SanFrancisco.json  20250221_ArizonaState_vs_OralRoberts_Phoenix.json  20250222_GrandCanyon_vs_Rutgers_Phoenix.json  20250301_Stanford_vs_Xavier_Stanford.json  20250302_SanFrancisco_vs_SanJoseState_SanFrancisco.json  20250314_Virginia_vs_California_Berkeley.json  20250315_Virginia_vs_California_Berkeley.json  20250316_California_vs_Virginia_Berkeley.json  20250414125445-SFSUBB36.json  20250417_California_vs_NCState_Berkeley.json  20250425_SaintMarys_vs_LMU_Moraga.json  20250515_California_vs_BostonCollege_Berkeley.json  20250613_Arizona_vs_CoastalCarolina_Omaha.json  20250613_Louisville_vs_OregonState_Omaha.json  20250614_UCLA_vs_MurrayState_Omaha.json  20250616_UCLA_vs_LSU_Omaha.json  (+3 more)
(+132 files in other folders)
