[project]
name = "ncaa-baseball-processor"
version = "1.0.0"
description = "NCAA Baseball Game Processor - Parse PDF box scores and generate stats"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pdfplumber>=0.10.0",
    "beautifulsoup4>=4.12.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "xlsxwriter>=3.1.0",
    "python-dateutil>=2.8.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "mypy>=1.0.0",
    "pandas-stubs>=2.0.0",
    "types-beautifulsoup4>=4.12.0",
    "types-python-dateutil>=2.8.0",
    "types-requests>=2.28.0",
]
pdf = [
    "playwright>=1.40.0",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = false
warn_unused_ignores = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_no_return = true
no_implicit_optional = false
show_error_codes = true
show_column_numbers = true

# Per-module options - ignore library imports
[[tool.mypy.overrides]]
module = [
    "pandas.*",
    "numpy.*",
    "xlsxwriter.*",
    "bs4.*",
    "requests.*",
    "pdfplumber.*",
    "playwright.*",
]
ignore_missing_imports = true

# Strict mode for well-typed modules (can expand this list over time)
[[tool.mypy.overrides]]
module = [
    "baseball_processor.utils.helpers",
]
disallow_untyped_defs = true
warn_return_any = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["baseball_processor*", "parsers*", "utils*"]
